--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -81,7 +81,7 @@
     "toptentracks": "Top 10 Titel",
     "doublecliktoadjustvolume": "Doppelklick, um die Lautstärke anzupassen",
     "newalbums": "Neue Alben",
-    "lyrics": "Lyrics",
+    "lyrics": "Liedtexte",
     "trackdownloaded": "Titel heruntergeladen",
     "createnewplaylist": "Neue Wiedergabeliste erstellen",
     "alreadyinplaylist": "Bereits in der Wiedergabeliste",
@@ -89,6 +89,29 @@
     "newplaylistlocal": "Neue Lokale Wiedergabeliste",
     "playlistdownloaded": "Wiedergabeliste heruntergeladen",
     "clearallhistory": "Alle Verlauf löschen",
-    "clearallhistorybody": "Sind Sie sicher, dass Sie den gesamten Suchverlauf löschen möchten?"
+    "clearallhistorybody": "Sind Sie sicher, dass Sie den gesamten Suchverlauf löschen möchten?",
+    "topten": "Top 10",
+    "singlesandcompilations": "Singles und Kompilationen",
+    "relatedartists": "Ähnliche Künstler",
+    "data": "Daten",
+    "saveyourdata": "Speichere deine Daten",
+    "clearaudioplayercache": "Lösche den Cache des Audioplayers",
+    "clearyouraudioplayercache": "Lösche deinen Audioplayer-Cache",
+    "clearimagecache": "Lösche den Bild-Cache",
+    "clearyourassetimagecache": "Lösche deinen Asset-Bild-Cache",
+    "clearallcache": "Lösche den gesamten Cache",
+    "clearallappcache": "Lösche den gesamten App-Cache",
+    "cache": "Cache",
+    "howmanyartistsshownwhensearching": "Wie viele Künstler werden bei der Suche angezeigt",
+    "howmanyalbumsshownwhensearching": "Wie viele Alben werden bei der Suche angezeigt",
+    "howmanytracksshownwhensearching": "Wie viele Titel werden bei der Suche angezeigt",
+    "howmanyplaylistsshownwhensearching": "Wie viele Playlists werden bei der Suche angezeigt",
+    "synctimedelay": "Synchronisierungszeitverzögerung",
+    "usesynctimedelay": "Verwende die Synchronisierungszeitverzögerung",
+    "prefersyncedlyrics": "Bevorzuge synchronisierte Liedtexte",
+    "preferusageofsyncedlyrics": "Bevorzuge die Verwendung synchronisierter Liedtexte"
+
+
+
 
 }
