--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -23,19 +23,19 @@
      "library": "Bibliothek",
     "online": "Online",
     "offline": "Offline",
-    "playlist": "Wiedergabeliste",
+    "playlist": "Playlist",
     "favouritesongs": "Lieblingslieder",
     "onlinefavouritesongs": "Lieblingslieder online",
-    "playlists": "Wiedergabelisten",
-    "onlineplaylists": "Wiedergabelisten online",
+    "playlists": "Playlisten",
+    "onlineplaylists": "Playlisten online",
     "songs": "Lieder",
     "offlinesongs": "Offline-Lieder",
-    "offlineplaylists": "Offline-Wiedergabelisten",
-    "newplaylist": "Neue Wiedergabeliste",
+    "offlineplaylists": "Offline-Playlisten",
+    "newplaylist": "Neue Playlist",
     "cancel": "Abbrechen",
     "create": "Erstellen",
     "download": "Herunterladen",
-    "addtoplaylist": "Zur Wiedergabeliste hinzufügen",
+    "addtoplaylist": "Zur Playlist hinzufügen",
     "like": "Gefällt mir",
     "unlike": "Gefällt mir nicht",
     "plain": "Plain",
@@ -48,20 +48,20 @@
     "album": "Album",
     "albums": "Die Alben",
     "tracks": "Die Lieder",
-    "removetrackfromplaylist": "Sind Sie sicher, dass Sie diese Lied von der Wiedergabeliste entfernen möchten?",
+    "removetrackfromplaylist": "Sind Sie sicher, dass Sie diese Lied von der Playlist entfernen möchten?",
     "continuee": "Weiter",
-    "removeplaylist":  "Sind Sie sicher, dass Sie diesen Wiedergabeliste entfernen möchten?",
+    "removeplaylist":  "Sind Sie sicher, dass Sie diesen Playlist entfernen möchten?",
     "haltmusicplayer": "Musikdienst anhalten?",
     "haltmusicplayerbody": "Sind Sie sicher, dass Sie den Musikdienst anhalten möchten?",
     "halt": "Anhalten",
     "changetitle": "Namen ändern",
     "taptochange": "Tippen zum Ändern",
     "change": "Ändern",
-    "changeplaylisttile": "Wiedergabeliste-Titel ändern",
+    "changeplaylisttile": "Playlist-Titel ändern",
     "changeplaylisttilebody": "Sind Sie sicher, dass Sie den Playlist-Titel ändern möchten?",
     "pleaseallowaccesstophotogalery": "Bitte gewähren Sie Pongo Zugriff auf Ihre Fotogalerie",
-    "editplaylist": "Wiedergabeliste bearbeiten",
-    "editplaylistbody": "Die Wiedergabelisten darf nicht abgespielt werden, während sie bearbeitet wird. Um sie zu bearbeiten, stoppen Sie die Playlist",
+    "editplaylist": "Playlist bearbeiten",
+    "editplaylistbody": "Die Playlisten darf nicht abgespielt werden, während sie bearbeitet wird. Um sie zu bearbeiten, stoppen Sie die Playlist",
     "selectedtracks": "Ausgewählte Titel",
     "delete": "Löschen",
     "removetracksfromplaylist": "Sind Sie sicher, dass Sie diese Titel aus der Playlist entfernen möchten?",
@@ -84,11 +84,11 @@
     "newalbums": "Neue Alben",
     "lyrics": "Liedtexte",
     "trackdownloaded": "Titel heruntergeladen",
-    "createnewplaylist": "Neue Wiedergabeliste erstellen",
-    "alreadyinplaylist": "Bereits in der Wiedergabeliste",
-    "addsongtoplaylist": "Lied zur Wiedergabeliste hinzufügen",
-    "newplaylistlocal": "Neue Lokale Wiedergabeliste",
-    "playlistdownloaded": "Wiedergabeliste heruntergeladen",
+    "createnewplaylist": "Neue Playlist erstellen",
+    "alreadyinplaylist": "Bereits in der Playlist",
+    "addsongtoplaylist": "Lied zur Playlist hinzufügen",
+    "newplaylistlocal": "Neue Lokale Playlist",
+    "playlistdownloaded": "Playlist heruntergeladen",
     "clearallhistory": "Alle Verlauf löschen",
     "clearallhistorybody": "Sind Sie sicher, dass Sie den gesamten Suchverlauf löschen möchten?",
     "topten": "Top 10",
@@ -145,9 +145,11 @@
     "audioplayer": "Audioplayer",
     "audioplayercaching": "Audioplayer-Caching",
     "letaudioplayercachethesongs": "Audioplayer die Lieder zwischenspeichern lassen",
-    "playlistname": "Wiedergabelistename",
+    "playlistname": "Playlistname",
     "successfullysavedsynctimedelay": "Die Synchronisierungszeitverzögerung für den Text dieses Titels wurde erfolgreich gespeichert",
-    "playlistnamealreadyexists": "Eine Wiedergabeliste mit demselben Namen existiert bereits",
-    "pleaseenablepongoaccesstophotos": "Bitte erlauben Sie Pongo den Zugriff auf Fotos"
+    "playlistnamealreadyexists": "Eine Playlist mit demselben Namen existiert bereits",
+    "pleaseenablepongoaccesstophotos": "Bitte erlauben Sie Pongo den Zugriff auf Fotos",
+    "onlineplaylist": "Online Playlist",
+    "cropimage": "Bild zuschneiden"
 
 }
