Added support for adding multiple chosen tracks to online playlist

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -150,6 +150,6 @@
     "playlistnamealreadyexists": "Eine Playlist mit demselben Namen existiert bereits",
     "pleaseenablepongoaccesstophotos": "Bitte erlauben Sie Pongo den Zugriff auf Fotos",
     "onlineplaylist": "Online Playlist",
-    "cropimage": "Bild zuschneiden"
-
+    "cropimage": "Bild zuschneiden",
+    "plustracks": "Lieder"
 }
