--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -758,5 +758,10 @@
     "cropimage": "Crop image",
     "@cropimage": {
         "description": "cropimage"
+    },
+
+    "plustracks": "songs",
+    "@plustracks": {
+        "description": "plustracks"
     }
 }
