--- a/lib/l10n/app_hr.arb
+++ b/lib/l10n/app_hr.arb
@@ -151,6 +151,7 @@
     "playlistnamealreadyexists": "Istoimena playlista već postoji",
     "pleaseallowaccesstophotogalery": "Molimo omogućite Pongu pristup fotografijama",
     "onlineplaylist": "Online playlisa",
-    "cropimage": "Izreži sliku"
+    "cropimage": "Izreži sliku",
+    "plustracks": "pjesama"
 
 }
