Fixed sync lyrics background problem, added online playlist change name and image and enabled reordering of the tracks

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -763,5 +763,10 @@
     "plustracks": "songs",
     "@plustracks": {
         "description": "plustracks"
+    },
+
+    "changename": "Change name",
+    "@changename": {
+        "description": "changename"
     }
 }
