--- a/lib/l10n/app_hr.arb
+++ b/lib/l10n/app_hr.arb
@@ -152,6 +152,7 @@
     "pleaseallowaccesstophotogalery": "Molimo omogućite Pongu pristup fotografijama",
     "onlineplaylist": "Online playlisa",
     "cropimage": "Izreži sliku",
-    "plustracks": "pjesama"
+    "plustracks": "pjesama",
+    "changename": "Promjeni ime"
 
 }
