--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -151,5 +151,6 @@
     "pleaseenablepongoaccesstophotos": "Bitte erlauben Sie Pongo den Zugriff auf Fotos",
     "onlineplaylist": "Online Playlist",
     "cropimage": "Bild zuschneiden",
-    "plustracks": "Lieder"
+    "plustracks": "Lieder",
+    "changename": "Namen ändern"
 }
