Fixed marquee issue by removing it and added hide/show ability to online playlists

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -152,5 +152,7 @@
     "onlineplaylist": "Online Playlist",
     "cropimage": "Bild zuschneiden",
     "plustracks": "Lieder",
-    "changename": "Namen ändern"
+    "changename": "Namen ändern",
+    "hide": "Verberg",
+    "show": "Zeig"
 }
