--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -768,5 +768,15 @@
     "changename": "Change name",
     "@changename": {
         "description": "changename"
+    },
+
+    "hide": "hide",
+    "@hide": {
+        "description": "hide"
+    },
+
+    "show": "show",
+    "@show": {
+        "description": "show"
     }
 }
