--- a/lib/l10n/app_hr.arb
+++ b/lib/l10n/app_hr.arb
@@ -153,6 +153,8 @@
     "onlineplaylist": "Online playlisa",
     "cropimage": "Izreži sliku",
     "plustracks": "pjesama",
-    "changename": "Promjeni ime"
+    "changename": "Promjeni ime",
+    "hide": "Sakri",
+    "show": "Prikaži"
 
 }
