Started adding the local playlist and added the ability to add songs to local playlist

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -29,8 +29,9 @@
     "playlists": "Playlisten",
     "onlineplaylists": "Playlisten online",
     "songs": "Lieder",
-    "offlinesongs": "Offline-Lieder",
-    "offlineplaylists": "Offline-Playlisten",
+    "offlinesongs": "Offline Lieder",
+    "offlineplaylists": "Offline Playlisten",
+    "offlineplaylist": "Offline Playlist",
     "newplaylist": "Neue Playlist",
     "cancel": "Abbrechen",
     "create": "Erstellen",
