--- a/lib/l10n/app_hr.arb
+++ b/lib/l10n/app_hr.arb
@@ -27,10 +27,12 @@
     "favouritesongs": "Omiljene pjesme",
     "onlinefavouritesongs": "Omiljene pjesme online",
     "playlists": "Playliste",
-    "onlineplaylists": "Playliste online",
+    "onlineplaylists": "Online playliste",
+    "onlineplaylists": "Online playlista",
     "songs": "Pjesme",
     "offlinesongs": "Pjesme dostupne offline",
     "offlineplaylists": "Playliste dostupne offline",
+    "offlineplaylists": "Playlista dostupna offline",
     "newplaylist": "Nova Playlista",
     "cancel": "Odustani",
     "create": "Stvori",
