Finished local playlist, adding tracks to local playlist and saving player state when existing the app

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -50,6 +50,8 @@
     "albums": "Die Alben",
     "tracks": "Die Lieder",
     "removetrackfromplaylist": "Sind Sie sicher, dass Sie diese Lied von der Playlist entfernen möchten?",
+    "removeselectedfromplaylist": "Sind Sie sicher, dass Sie das Ausgewählte aus der Playlist entfernen möchten?",
+    "removefromplaylist": "Aus der Playlist entfernen",
     "continuee": "Weiter",
     "removeplaylist":  "Sind Sie sicher, dass Sie diesen Playlist entfernen möchten?",
     "haltmusicplayer": "Musikdienst anhalten?",
