--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -250,6 +250,16 @@
         "description": "removetrackfromplaylist"
     },
 
+    "removeselectedfromplaylist": "Are you sure you want to remove selected from the playlist?",
+    "@removeselectedfromplaylist": {
+        "description": "removeselectedfromplaylist"
+    },
+
+    "removefromplaylist": "Remove from playlist",
+    "@removefromplaylist": {
+        "description": "removefromplaylist"
+    },
+
     "continuee": "Continue",
     "@continuee": {
         "description": "continuee"
