Added the unability to have more than once a song in a local playlist

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -155,6 +155,7 @@
     "onlineplaylist": "Online Playlist",
     "cropimage": "Bild zuschneiden",
     "plustracks": "Lieder",
+    "playlistalreadycontainsthistrack": "Die Playlist enthält diesen Titel bereits",
     "changename": "Namen ändern",
     "hide": "Verberg",
     "show": "Zeig",
