--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -410,6 +410,11 @@
         "description": "noalbums"
     },
 
+    "playlistalreadycontainsthistrack": "Playlist already contains this track",
+    "@playlistalreadycontainsthistrack": {
+        "description": "playlistalreadycontainsthistrack"
+    },
+
     "notracks": "No tracks",
     "@notracks": {
         "description": "notracks"
