--- a/lib/l10n/app_hr.arb
+++ b/lib/l10n/app_hr.arb
@@ -39,7 +39,8 @@
     "download": "Preuzmi",
     "addtoplaylist": "Dodaj u Playlista",
     "like": "Sviđa mi se",
-    "unlike": "Ne sviđa mi se",
+    "unlike": "Ne sviđa mi se",    
+    "playlistalreadycontainsthistrack": "Playlista već sadrži ovu pjesmu",
     "plain": "Plain",
     "sync": "Sync",
     "nosynclyrics": "Nema sinkroniziranih stihova",
