Added the picture caching option, removed data in settings, fixed shimmers

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -168,5 +168,8 @@
     "removefromdownloaded": "Aus heruntergeladenen entfernen",
     "removefromdownloadedbody": "Möchten Sie die ausgewählten Titel aus den heruntergeladenen entfernen?",
     "lastlistenedto": "Zuletzt angehört",
-    "explore": "Erkunden"
+    "explore": "Erkunden",
+    "images": "Die Bilder",
+    "imagecaching": "Bildcaching",
+    "cacheimagestoreducenetworkactivity": "Die Bilder zwischenspeichern, um die Netzwerkauslastung zu reduzieren"
 }
